--- a/project/src/main/res/values-fr-rCA/strings.xml
+++ b/project/src/main/res/values-fr-rCA/strings.xml
@@ -20,6 +20,8 @@
     <string name="missing_dates_flight_TEMPLATE">Pour voir les vols à destination de %s,\ndites-nous où vous souhaitez partir.</string>
     <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
     <string name="flight_trends_missing_origin">Pour connaître les tendances dans les prix \ndes vols, dites-nous de quel endroit vous partez.</string>
+    <!-- Message to show on Flight Trends (GDE) fragment when users have requested the tool tip -->
+    <string name="flight_trends_tool_tip">Flight Trends vous présente un aperçu des fluctuations des tarifs au fil du temps. Étant donné que les tarifs sont établis sur des données obtenues directement des résultats de recherche, certains itinéraires présentent moins d\&apos;information que d\&apos;autres.</string>
     <!-- Denotes the start date of the trip -->
     <string name="trip_starts">Du</string>
     <!-- Denotes the end date of the trip -->
@@ -79,6 +81,10 @@
         <item quantity="many">%s vols de retour</item>
         <item quantity="other">%s vols de retour</item>
     </plurals>
+    <!-- Label indicating the price shown is the price per person rather than the total-->
+    <string name="prices_roundtrip_label">Tarifs aller-retour par personne</string>
+    <!-- Label indicating the price shown is the price per person rather than the total-->
+    <string name="prices_oneway_label">Tarifs en aller simple par personne</string>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Votre voyage est vide.</string>
     <!-- Tablet Trip bucket, Book Flight button text -->
@@ -1195,7 +1201,7 @@
     <!-- You'll earn points for this trip -->
     <string name="youll_earn_points_TEMPLATE">Vous obtiendrez des points %1$s grâce à ce voyage.</string>
     <!-- Blurb text displayed on account login button when already logged in -->
-    <string name="x_points_for_this_trip_TEMPLATE">%1$s points pour ce voyage!</string>
+    <string name="x_points_for_this_trip_TEMPLATE">&lt;b&gt;%1$s&lt;/b&gt; points pour ce voyage!</string>
     <!-- You'll earn bonus points for this booking -->
     <string name="youll_earn_bonus_points_for_this_booking">Vous obtiendrez des points en prime pour cette réservation</string>
     <!-- Label to show while we are checking for price changes on the checkout receipt -->
