--- a/project/src/main/res/values-da/strings.xml
+++ b/project/src/main/res/values-da/strings.xml
@@ -20,6 +20,8 @@
     <string name="missing_dates_flight_TEMPLATE">For at kunne søge efter flyrejser til %s,\n, bedes du fortælle os, hvornår du ønsker at flyve.</string>
     <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
     <string name="flight_trends_missing_origin">Angiv hvor du rejser fra\nfor at se flypristendenser.</string>
+    <!-- Message to show on Flight Trends (GDE) fragment when users have requested the tool tip -->
+    <string name="flight_trends_tool_tip">Flytendenser giver dig et indblik i, hvordan flypriser svinger over tid. Eftersom de viste priser er baseret på livedata fra rigtige søgninger, har nogle ruter færre oplysninger end andre.</string>
     <!-- Denotes the start date of the trip -->
     <string name="trip_starts">Rejsen starter</string>
     <!-- Denotes the end date of the trip -->
@@ -79,6 +81,10 @@
         <item quantity="many">%s hjemrejser</item>
         <item quantity="other">%s hjemrejser</item>
     </plurals>
+    <!-- Label indicating the price shown is the price per person rather than the total-->
+    <string name="prices_roundtrip_label">Priser pr. person tur-retur</string>
+    <!-- Label indicating the price shown is the price per person rather than the total-->
+    <string name="prices_oneway_label">Priser pr. person for enkeltbillet</string>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Din rejse er tom.</string>
     <!-- Tablet Trip bucket, Book Flight button text -->
@@ -1195,7 +1201,7 @@
     <!-- You'll earn points for this trip -->
     <string name="youll_earn_points_TEMPLATE">Du vil optjene %1$s point for denne rejse!</string>
     <!-- Blurb text displayed on account login button when already logged in -->
-    <string name="x_points_for_this_trip_TEMPLATE">%1$s point for denne rejse!</string>
+    <string name="x_points_for_this_trip_TEMPLATE">&lt;b&gt;%1$s&lt;/b&gt; point for denne rejse!</string>
     <!-- You'll earn bonus points for this booking -->
     <string name="youll_earn_bonus_points_for_this_booking">Du optjener bonuspoint for denne reservation!</string>
     <!-- Label to show while we are checking for price changes on the checkout receipt -->
