--- a/project/src/main/res/values-es/strings.xml
+++ b/project/src/main/res/values-es/strings.xml
@@ -20,6 +20,8 @@
     <string name="missing_dates_flight_TEMPLATE">Para buscar vuelos a %s,\nindica la fecha del vuelo.</string>
     <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
     <string name="flight_trends_missing_origin">Para conocer las tendencias de precios de los vuelos,\nindícanos el origen de tu vuelo.</string>
+    <!-- Message to show on Flight Trends (GDE) fragment when users have requested the tool tip -->
+    <string name="flight_trends_tool_tip">Las Tendencias de vuelos te dan una idea de cómo cambian los precios de los vuelos con el paso del tiempo. Debido a que los precios desplegados están basados en datos actuales obtenidos a través de búsquedas reales, algunas de las rutas tienen menos información que otras.</string>
     <!-- Denotes the start date of the trip -->
     <string name="trip_starts">El viaje comienza el</string>
     <!-- Denotes the end date of the trip -->
@@ -79,6 +81,10 @@
         <item quantity="many">%s vuelos de regreso</item>
         <item quantity="other">%s vuelos de regreso</item>
     </plurals>
+    <!-- Label indicating the price shown is the price per person rather than the total-->
+    <string name="prices_roundtrip_label">Precios de ida y vuelta por persona</string>
+    <!-- Label indicating the price shown is the price per person rather than the total-->
+    <string name="prices_oneway_label">Precios de ida por persona</string>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Tu viaje está vacío.</string>
     <!-- Tablet Trip bucket, Book Flight button text -->
@@ -1195,7 +1201,7 @@
     <!-- You'll earn points for this trip -->
     <string name="youll_earn_points_TEMPLATE">¡Obtendrás %1$s puntos por este viaje!</string>
     <!-- Blurb text displayed on account login button when already logged in -->
-    <string name="x_points_for_this_trip_TEMPLATE">¡%1$s puntos por este viaje!</string>
+    <string name="x_points_for_this_trip_TEMPLATE">¡&lt;b&gt;%1$s&lt;/b&gt; puntos por este viaje!</string>
     <!-- You'll earn bonus points for this booking -->
     <string name="youll_earn_bonus_points_for_this_booking">¡Obtendrás puntos extra por este viaje!</string>
     <!-- Label to show while we are checking for price changes on the checkout receipt -->
