--- a/project/src/main/res/values-vi/strings.xml
+++ b/project/src/main/res/values-vi/strings.xml
@@ -20,6 +20,8 @@
     <string name="missing_dates_flight_TEMPLATE">Để tìm chuyến bay đến %s,\nhãy cho chúng tôi biết thời điểm chuyến bay mong muốn.</string>
     <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
     <string name="flight_trends_missing_origin">Để xem xu hướng giá chuyến bay,\nhãy cho chúng tôi biết quý vị bay từ đâu.</string>
+    <!-- Message to show on Flight Trends (GDE) fragment when users have requested the tool tip -->
+    <string name="flight_trends_tool_tip">Xu hướng giá chuyến bay giúp quý vị nắm thông tin về việc thay đổi giá của chuyến bay. Vì giá hiển thị dựa trên dữ liệu cập nhật thực tế, một số chuyến bay có ít thông tin hơn.</string>
     <!-- Denotes the start date of the trip -->
     <string name="trip_starts">Khởi hành</string>
     <!-- Denotes the end date of the trip -->
@@ -77,8 +79,12 @@
         <item quantity="two">%s C.bay trở về</item>
         <item quantity="few">%s C.bay trở về</item>
         <item quantity="many">%s C.bay trở về</item>
-        <item quantity="other">%s C.bay trở về</item>
+        <item quantity="other">%s Chuyến bay trở về</item>
     </plurals>
+    <!-- Label indicating the price shown is the price per person rather than the total-->
+    <string name="prices_roundtrip_label">Giá khứ hồi 1 người</string>
+    <!-- Label indicating the price shown is the price per person rather than the total-->
+    <string name="prices_oneway_label">Giá 1 chiều 1 người</string>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Không có chuyến đi.</string>
     <!-- Tablet Trip bucket, Book Flight button text -->
@@ -1195,7 +1201,7 @@
     <!-- You'll earn points for this trip -->
     <string name="youll_earn_points_TEMPLATE">Quý vị sẽ nhận %1$s điểm cho chuyến đi này!</string>
     <!-- Blurb text displayed on account login button when already logged in -->
-    <string name="x_points_for_this_trip_TEMPLATE">%1$s điểm cho chuyến đi này!</string>
+    <string name="x_points_for_this_trip_TEMPLATE">&lt;b&gt;%1$s&lt;/b&gt; điểm cho chuyến đi này!</string>
     <!-- You'll earn bonus points for this booking -->
     <string name="youll_earn_bonus_points_for_this_booking">Quý vị sẽ nhận điểm thưởng với lần đặt này</string>
     <!-- Label to show while we are checking for price changes on the checkout receipt -->
